# nb2_agent_project

./: DS_notebook.ipynb  README.md  nb2_agent.py  pyproject.toml  requirements.txt
nb2pdf_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
